--- a/userappAN/src/app/pages/sidebar/sidebar.component.html
+++ b/userappAN/src/app/pages/sidebar/sidebar.component.html
@@ -32,6 +32,7 @@
       </a>
     </li>
     <li><a routerLink="/facture">💸 Factures</a></li>
+    <li><a routerLink="/suppliers">📦 Suppliers</a></li>
 
     
     
