--- a/userappAN/src/app/pages/project-details/project-details.component.html
+++ b/userappAN/src/app/pages/project-details/project-details.component.html
@@ -47,6 +47,8 @@
     <br>
     <button (click)="exportToPDF()" class="button-export">Export as PDF</button>
     <button (click)="updateP()" class="btn btn-secondary mt-3">Update</button>
+    <button (click)="viewTasks()" class="btn btn-info mt-3">View Tasks</button>
+
   </div>
 
   <i class="fas fa-arrow-left go-back" (click)="goBack()"></i>
