--- a/userappAN/src/app/pages/tasks/tasks.component.html
+++ b/userappAN/src/app/pages/tasks/tasks.component.html
@@ -1,35 +1,22 @@
 <div class="background-container">
+  <div>
   <button (click)="navigateToTaskAssistant()" class="icon-btn" title="Task Assistant">
     <i class="fas fa-robot"></i>
   </button>
+
+  <h2 class="project-title">Project name : {{ projectName }}</h2>
+
 
   <div class="add-task-container">
     <button (click)="addTask()" class="add-task-btn">
       <i class="fas fa-plus-circle"></i> Add Task
     </button>
-    <button (click)="showPredictionForm = !showPredictionForm" class="add-task-btn">
-      <i class="fas fa-chart-line"></i> Prediction
-    </button>
+   
   </div>
 
-  <div *ngIf="showPredictionForm" class="prediction-form-container">
-    <h3>Predict Task Duration</h3>
-    <form (ngSubmit)="predictTaskDuration(predictionName.value, predictionDescription.value)">
-      <div class="form-group">
-        <label for="predictionName">Task Name:</label>
-        <input id="predictionName" #predictionName type="text" required class="form-control" />
-      </div>
-      <div class="form-group">
-        <label for="predictionDescription">Task Description:</label>
-        <textarea id="predictionDescription" #predictionDescription required class="form-control"></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Predict</button>
-    </form>
+  
 
-    <div *ngIf="predictedDuration !== null" class="prediction-result">
-      <h4>Predicted Duration:</h4>
-      <p>{{ predictedDuration }} days</p>
-    </div>
+    
 
     <div *ngIf="errorMessage" class="error-message">
       <h4>Error:</h4>
@@ -123,9 +110,10 @@
   </ng-template>
 
   <div id="gantt-container" class="gantt-chart"></div>
-  
 
 </div>
+  
+
 
 <ng-template #qrCodeModal let-modal>
   <div class="modal-header">
